@@ -4,7 +4,7 @@
 # Copyright (c) 2004 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: asn.test,v 1.2 2004/08/07 02:17:25 andreas_kupries Exp $
+# RCS: @(#) $Id: asn.test,v 1.3 2004/08/10 07:01:31 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
