@@ -8,7 +8,7 @@
 # Copyright (c) 2003 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: docidx.test,v 1.4 2004/07/31 04:53:27 andreas_kupries Exp $
+# RCS: @(#) $Id: docidx.test,v 1.5 2004/08/10 07:01:31 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
