@@ -1,6 +1,6 @@
 # -*- tcl -*-
 #
-# $Id: fmt.tmml,v 1.19 2004/07/31 04:53:36 andreas_kupries Exp $
+# $Id: fmt.tmml,v 1.20 2004/08/10 07:01:32 andreas_kupries Exp $
 #
 # [expand] definitions to convert a tcl based manpage definition
 # into TMML.
