@@ -3,7 +3,7 @@
 #
 # Copyright (c) 2004 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 #
-# RCS: @(#) $Id: faop_difference.test,v 1.2 2004/07/28 08:14:11 andreas_kupries Exp $
+# RCS: @(#) $Id: faop_difference.test,v 1.3 2004/08/10 07:01:32 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
