@@ -1,6 +1,6 @@
 # rc4.test - Copyright (C) 2004 Pat Thoyts <patthoyts@users.sourceforge.net>
 #
-# $Id: rc4.test,v 1.4 2004/07/30 06:26:22 andreas_kupries Exp $
+# $Id: rc4.test,v 1.5 2004/08/10 07:01:33 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 # Initialize the test package
