@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: sets.tcl,v 1.5 2004/08/05 05:44:01 andreas_kupries Exp $
+# RCS: @(#) $Id: sets.tcl,v 1.6 2004/08/10 07:01:33 andreas_kupries Exp $
 #
 #----------------------------------------------------------------------
 
