@@ -8,7 +8,7 @@
 # Copyright (c) 1998-2000 by Ajuba Solutions.
 # All rights reserved.
 #
-# RCS: @(#) $Id: stack.test,v 1.9 2004/08/10 06:18:07 andreas_kupries Exp $
+# RCS: @(#) $Id: stack.test,v 1.10 2004/08/10 07:01:33 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
