@@ -1,5 +1,9 @@
 2004-08-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
+	* tree.tcl (::struct::tree::tree, ::struct::tree::_destroy):
+	  Better alias for the object command (removed superfluous leading
+	  colons).
+
 	* stack.man: Stack, queue; version bumped to 1.3.
 	* queue.man: 
 	* stack.tcl: 
